--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.11.0
+
+flutter_icons:
+  image_path: "assets/icon/icon.png"
+  adaptive_icon_background: "assets/icon/icon_b.png"
+  adaptive_icon_foreground: "assets/icon/icon_f.png"
+  android: true
+  ios: false
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
