--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   map: ^1.3.4
   cached_network_image: ^3.2.0
   shared_preferences: ^2.0.15
+  path_provider: ^2.0.11
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
