--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,9 +7,6 @@ if (localPropertiesFile.exists()) {
 }
 
 def flutterRoot = localProperties.getProperty('flutter.sdk')
-if (flutterRoot == null) {
-    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
-}
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
@@ -69,6 +66,7 @@ android {
            signingConfig signingConfigs.release
        }
    }
+    namespace 'com.example.svitlo'
 }
 
 flutter {
