--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,20 +34,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.5
+  http: ^1.1.0
   provider: ^6.0.4
-  intl: ^0.17.0
-  map: ^1.3.4
+  intl: ^0.19.0
+  map: ^2.0.2
   cached_network_image: ^3.2.0
   shared_preferences: ^2.0.15
   path_provider: ^2.0.11
   path: ^1.8.0
   url_launcher: ^6.1.7
+  html: ^0.15.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.11.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter_icons:
   image_path: "assets/icon/icon.png"
